<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".AddAction">

        <Button
            android:id="@+id/btnColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onBtnColorClick"
            android:text="@string/color" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/title" />

        <EditText
            android:id="@+id/tsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true"
            android:text="@string/trainingTitle" />

        <TextView
            android:id="@+id/tvPrepare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/prepare" />

        <EditText
            android:id="@+id/tsPrepare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:selectAllOnFocus="true"
            android:text="@string/ten" />

        <TextView
            android:id="@+id/tvWork"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/work" />

        <EditText
            android:id="@+id/tsWork"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:selectAllOnFocus="true"
            android:text="@string/twenty" />

        <TextView
            android:id="@+id/tvcalm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/calm" />

        <EditText
            android:id="@+id/tsCalm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:selectAllOnFocus="true"
            android:text="@string/ten" />

        <TextView
            android:id="@+id/tvCycles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/cycles" />

        <EditText
            android:id="@+id/tsCyc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:selectAllOnFocus="true"
            android:text="@string/eight" />

        <TextView
            android:id="@+id/tvSets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/sets" />

        <EditText
            android:id="@+id/tsSets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:selectAllOnFocus="true"
            android:text="@string/one" />

        <TextView
            android:id="@+id/tvStsCalm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/stsCalm" />

        <EditText
            android:id="@+id/ettsCalm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:selectAllOnFocus="true"
            android:text="@string/zero" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="50dp"
            android:background="@color/colorPrimary"
            android:onClick="onBtnSaveClick"
            android:text="@string/save" />
    </LinearLayout>
</ScrollView>